--- a/src/styles/_recipe.scss
+++ b/src/styles/_recipe.scss
@@ -1,3 +1,10 @@
+.recipe {
+    border-radius: 10px;
+    box-shadow: 0px 5px 20px rgba(71, 71, 71, .4);
+    min-width: 40%;
+    background: #fff;
+    padding: 20px;
+}
 
 .recipe-top {
     display: flex;
