--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,3 +7,14 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.App {
+    min-height: 100vh;
+    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+}
+
+
+@import './search-from';
+@import './recipe-list';
+@import './recipe';
+@import './recipe-ingredients';
